--- a/assets/css/servicios.css
+++ b/assets/css/servicios.css
@@ -22,33 +22,51 @@
 /* variables */
 /* Estilos de textos y encabezados */
 h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  font-family: "anton";
+}
+
+h2, h3 {
   font-family: "anton";
 }
 
 h2 {
   font-size: 1.8rem;
-  font-family: "anton";
-  letter-spacing: 2px;
 }
 
-p, a {
-  font-size: 0.9rem;
+h3 {
+  font-size: 1.4rem;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a, p, cite, span {
   font-family: "poppins";
-  line-height: 1.3rem;
+}
+
+a, p {
+  font-size: 0.9rem;
+}
+@media screen and (min-width: 750px) {
+  a, p {
+    font-size: 1rem;
+  }
+}
+@media screen and (min-width: 1350px) {
+  a, p {
+    font-size: 1.1rem;
+  }
 }
 
 cite {
+  margin: 0 1.5rem;
   padding: 0 1.5rem;
-  font-size: 1.2em;
-  font-family: "poppins";
-  line-height: 2rem;
+  font-size: 1.3rem;
   color: rgb(148, 148, 148);
   border-left: 3px solid rgb(243, 160, 160);
-}
-cite span {
-  font-size: 4rem;
-  line-height: 1rem;
 }
 
 /* estilos globales básicos de estructura*/
@@ -81,7 +99,7 @@ section {
   row-gap: 2.5rem;
 }
 
-.art01 {
+.gor_art01 {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -90,43 +108,43 @@ section {
   row-gap: 2rem;
 }
 @media only screen and (min-width: 1350px) {
-  .art01 {
+  .gor_art01 {
     width: 80%;
   }
 }
-.art01 > :nth-child(1) {
+.gor_art01 > :nth-child(1) {
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  row-gap: 2rem;
+  gap: 1rem;
 }
 @media only screen and (min-width: 750px) {
-  .art01 > :nth-child(1) {
-    justify-content: space-between;
+  .gor_art01 > :nth-child(2) {
+    width: 80%;
   }
 }
-.art01 > :nth-child(1) > img {
-  width: 100%;
-  object-fit: cover;
-  object-position: center center;
+@media only screen and (min-width: 1350px) {
+  .gor_art01 > :nth-child(2) {
+    width: 60%;
+  }
 }
-.art01 > :nth-child(1) > :nth-child(2) {
+.gor_art01 > :nth-child(3) {
   width: 100%;
-  padding: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  row-gap: 1rem;
 }
-.art01 > :nth-child(2) {
-  margin: 0 1.5rem;
+@media only screen and (min-width: 750px) {
+  .gor_art01 > :nth-child(3) {
+    height: 200px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center center;
+       object-position: center center;
+  }
 }
-.art01 > :nth-child(3) {
-  width: 100%;
-  object-fit: cover;
-  object-position: center center;
-}/*# sourceMappingURL=servicios.css.map */
+@media only screen and (min-width: 1350px) {
+  .gor_art01 > :nth-child(3) {
+    height: 200px;
+  }
+}
