--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -2,6 +2,59 @@
 @use 'config';
 
 
+.gor_art01{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    row-gap: 2rem;
+    @media only screen and (min-width: config.$desktop){
+        &{
+            width: 80%;
+        }      
+    }
+    >:nth-child(1){
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 1rem;
+    }
+    >:nth-child(2){
+        @media only screen and (min-width: config.$tablet){
+            &{
+                width: 80%;
+            }   
+        }
+        @media only screen and (min-width: config.$desktop){
+            &{
+                width: 60%;
+            }   
+        }
+    }
+    >:nth-child(3){
+        width: 100%;
+        @media only screen and (min-width: config.$tablet){
+            &{
+                height: 200px;
+                object-fit: cover;
+                object-position: center center;
+            }   
+        }
+        @media only screen and (min-width: config.$desktop){
+            &{
+                height: 200px;
+            }   
+        }
+    }
+}
+
+
+
+
 
 
 
