--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -73,6 +73,10 @@ cite{
     color: $color01bis;
     border-left: 3px solid $color02;
 }
+.boton{
+    background-color: aquamarine;
+    padding: 1rem 3rem;
+}
 
 /* estilos globales básicos de estructura*/
 body{
