--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -69,6 +69,11 @@ cite {
   border-left: 3px solid rgb(243, 160, 160);
 }
 
+.boton {
+  background-color: aquamarine;
+  padding: 1rem 3rem;
+}
+
 /* estilos globales básicos de estructura*/
 body {
   display: flex;
@@ -118,8 +123,46 @@ section {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   gap: 1rem;
+}
+@media screen and (min-width: 1350px) {
+  .gor_art01 > :nth-child(1) {
+    justify-content: space-between;
+  }
+}
+.gor_art01 > :nth-child(1) > img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+@media screen and (min-width: 750px) {
+  .gor_art01 > :nth-child(1) > img {
+    height: 40vh;
+  }
+}
+@media screen and (min-width: 1350px) {
+  .gor_art01 > :nth-child(1) > img {
+    width: 40%;
+    height: 500px;
+  }
+}
+.gor_art01 > :nth-child(1) > div {
+  width: 100%;
+  padding: 0 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  row-gap: 1.5rem;
+}
+@media screen and (min-width: 1350px) {
+  .gor_art01 > :nth-child(1) > div {
+    width: 55%;
+  }
 }
 @media only screen and (min-width: 750px) {
   .gor_art01 > :nth-child(2) {
