--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -20,8 +20,46 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         gap: 1rem;
+        @media screen and (min-width: config.$desktop){
+            &{
+                justify-content: space-between;
+            }                
+            
+        }
+        >img{
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+            object-position: center center;
+            @media screen and (min-width: config.$tablet){
+                &{
+                    height: 40vh;
+                }                
+            }
+            @media screen and (min-width: config.$desktop){
+                &{
+                    width: 40%;
+                    height: 500px;
+                }                
+            }
+        }
+        >div{
+            width: 100%;
+            padding: 0 config.$paddingTexto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            row-gap: 1.5rem;
+            @media screen and (min-width: config.$desktop){
+                &{
+                    width: 55%;
+                }                
+                
+            }
+        }
     }
     >:nth-child(2){
         @media only screen and (min-width: config.$tablet){
