--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -22,43 +22,40 @@
 /* variables */
 /* Estilos de textos y encabezados */
 h1 {
-  font-size: 2.5rem;
+  font-size: clamp(2.5rem, 4vw, 6rem);
   font-family: "anton";
-}
-
-h2, h3 {
-  font-family: "anton";
+  letter-spacing: 2px;
+  color: rgb(34, 34, 34);
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: clamp(2rem, 3.5vw, 5rem);
+  font-family: "poppins";
+  font-weight: 100;
+  letter-spacing: 1px;
+  color: rgb(88, 189, 88);
 }
 
 h3 {
-  font-size: 1.4rem;
+  font-size: clamp(1.5rem, 3vw, 3rem);
+  font-family: "poppins";
+  font-weight: 100;
+  letter-spacing: 1px;
+  color: rgb(243, 160, 160);
+}
+
+a, p {
+  font-size: clamp(0.9rem, 2vw, 1rem);
+  font-family: "poppins";
+}
+
+p {
+  color: rgb(34, 34, 34);
 }
 
 a {
   text-decoration: none;
-  color: inherit;
-}
-
-a, p, cite, span {
-  font-family: "poppins";
-}
-
-a, p {
-  font-size: 0.9rem;
-}
-@media screen and (min-width: 750px) {
-  a, p {
-    font-size: 1rem;
-  }
-}
-@media screen and (min-width: 1350px) {
-  a, p {
-    font-size: 1.1rem;
-  }
+  color: rgb(243, 160, 160);
 }
 
 cite {
@@ -70,8 +67,17 @@ cite {
 }
 
 .boton {
-  background-color: aquamarine;
+  background-color: rgb(243, 160, 160);
+  color: white;
+  font-weight: bolder;
+  letter-spacing: 1px;
   padding: 1rem 3rem;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+.boton:hover {
+  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
 }
 
 /* estilos globales básicos de estructura*/
