--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -34,37 +34,35 @@ $paddingTexto: 1.5rem;
 
 /* Estilos de textos y encabezados */
 h1{
-    font-size: 2.5rem;
+    font-size: clamp(2.5rem, 4vw, 6rem);
     font-family: $fuente01;
-}
-h2, h3{
-    font-family: $fuente01;
+    letter-spacing: 2px;
+    color: $color01;
 }
 h2{
-    font-size: 1.8rem;
+    font-size: clamp(2rem, 3.5vw, 5rem);
+    font-family: $fuente02;
+    font-weight: 100;
+    letter-spacing: 1px;
+    color: $color03;  
 }
 h3{
-    font-size: 1.4rem;
+    font-size: clamp(1.5rem, 3vw, 3rem);
+    font-family: $fuente02;
+    font-weight: 100;
+    letter-spacing: 1px;
+    color: $color02
+}
+a, p{    
+    font-size: clamp(0.9rem, 2vw, 1rem);
+    font-family: $fuente02;
+}
+p{
+    color: $color01;
 }
 a{
     text-decoration: none;
-    color: inherit;
-}
-a, p, cite, span{
-    font-family: $fuente02;
-}
-a, p{
-    font-size: 0.9rem;
-    @media screen and (min-width: $tablet){
-        &{
-            font-size: 1rem;
-        }
-    }
-    @media screen and (min-width: $desktop){
-        &{
-            font-size: 1.1rem;
-        }
-    }
+    color: $color02
 }
 cite{
     margin: 0 $paddingTexto;
@@ -74,8 +72,18 @@ cite{
     border-left: 3px solid $color02;
 }
 .boton{
-    background-color: aquamarine;
+    background-color: $color02;
+    color: $color00;
+    font-weight: bolder;
+    letter-spacing: 1px;
     padding: 1rem 3rem;
+    border-radius: 5px;
+    transition: 0.5s;
+    &:hover{
+        transform: scale(0.9);
+        -webkit-transform: scale(0.9);
+
+    }
 }
 
 /* estilos globales básicos de estructura*/
